Support for other game maps
- BedWars